--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/react,windows,linux,macos
 
 build
+
+src/index.html
+src/App.tsx
